# CI2024_lab1

./: CI2024_lab1.ipynb  README.md  instance1.ipynb  instance2.ipynb  instance3.ipynb  instance456.ipynb  pyproject.toml
