[tool.poetry]
name = "ci2024-lab1"
version = "0.1.0"
description = ""
authors = ["Luo <s328249@polito.studenti.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
icecream = "^2.1.3"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
pybind11 = "^2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
